--- a/frontend/game.html
+++ b/frontend/game.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Double Series</title>
+    <title>Omok</title>
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link type="text/css" rel="stylesheet" href="/lib/jquery-ui.min.css" />
     <link type="text/css" rel="stylesheet" href="game.css" />
